--- a/File_Transfer/Views/Home/Index.cshtml
+++ b/File_Transfer/Views/Home/Index.cshtml
@@ -5,12 +5,78 @@
 
 <!DOCTYPE html>
 
+
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>Kapital Medya File Share</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+ 
+    @*arka planda kayan resim*@
+    <script>
+        addEventListener("load", function () {
+            setTimeout(hideURLbar, 0);
+        }, false);
+
+        function hideURLbar() {
+            window.scrollTo(0, 1);
+        }
+    </script>
+
+    <!-- Custom Theme files -->
+    <link href="~/css/style.css" rel="stylesheet" />
+    <link href="~/css/font-awesome.min.css" rel="stylesheet" />
+    <!-- //Custom Theme files -->
+    <!-- web font -->
+    <link href="//fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet">
+    <!-- //web font -->
+
 </head>
 <body>
-    <h1>testwewe</h1>
+
+    <!-- main -->
+    <div class="w3layouts-main">
+        <div class="bg-layer">
+            <h1>File Upload</h1>
+            <div class="header-main">
+                <div class="main-icon">
+                    <span class="fa fa-eercast"></span>
+                </div>
+                <div class="header-left-bottom">
+                    <form action="Home/test" method="post" enctype="multipart/form-data">
+                        <div class="icon1">
+                            <span class="fa fa-user" style="position:absolute"></span>
+                            <input type="email" placeholder="Alıcı Email Adresi" style="padding-left:20px" />
+                        </div>
+                        <div class="icon1">
+                            <span class="fa fa-user" style="position:absolute"></span>
+                            <input type="email" placeholder="Email Adresiniz"  style="padding-left:20px" />
+                        </div>
+
+                        <div class="icon1">
+                            
+                        </div>
+                      
+                        <div class="bottom">
+                            <button class="btn">Paylaş</button>
+                        </div>
+
+                    </form>
+                </div>
+            
+            </div>
+
+            <!-- copyright -->
+            <div class="copyright">
+                <p>© 2020 Fİle Transfer Form . All rights reserved | Design by <a href="http://w3layouts.com/" target="_blank">Kapital</a></p>
+            </div>
+            <!-- //copyright -->
+        </div>
+    </div>
+    <!-- //main -->
+
 </body>
 </html>
+
+<!-- Latest compiled and minified JavaScript -->
