--- a/File_Transfer/wwwroot/css/style.css
+++ b/File_Transfer/wwwroot/css/style.css
@@ -5,9 +5,9 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 /*-- reset --*/
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;/*font:inherit;*/vertical-align:baseline;}
 article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
-ol,ul{list-style:none;margin:0px;padding:0px;}
+ol,ul{list-style:none;color:aliceblue;margin-top:10px;/*margin:0px;*/padding:0px;}
 blockquote,q{quotes:none;}
 blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
 table{border-collapse:collapse;border-spacing:0;}
@@ -30,7 +30,38 @@ img{max-width:100%;}
 body {
 	font-family: 'Hind', sans-serif;
 } 
-/*-- main --*/ 
+/*-- main --*/
+
+/*dosya ekleme alaný css duzenlemesi baþlangýç*/
+
+
+
+.btn-file {
+    background-color: rgba(255, 255, 255, 0.94);
+    border-radius:15px;
+    position: relative;
+    overflow: hidden;
+    width:100%;
+}
+
+    .btn-file input[type=file] {
+        position: absolute;
+        top: 0;
+        right: 0;
+        min-width: 100%;
+        min-height: 100%;
+        font-size: 100px;
+        text-align: right;
+        filter: alpha(opacity=0);
+        opacity: 0;
+        outline: none;
+        background: white;
+        cursor: inherit;
+        display: block;
+    }
+/*dosya ekleme alaný css duzenlemesi bitiþ*/ 
+
+
 
 h1 {
 	font-size: 45px;
@@ -85,6 +116,7 @@ h1 {
     padding: 0em 0 0;
 }
 .icon1 {
+    border-radius:20px;
 	margin: 0 0 1em;
 	padding: .8em 1em;
 	background: rgba(255, 255, 255, 0.94);
@@ -165,6 +197,7 @@ a {
     letter-spacing: 1px;
 }
 .header-left-bottom button.btn {
+    border-radius:20px;
     background: #007cc0;
     color: #fff;
     font-size: 15px;
